# Project-NUEVO

./: .gitignore
docs/: COMMUNICATION_PROTOCOL.md
docs/manual/: MANUAL.md
firmware/arduino/src/drivers/: DCMotor.cpp  DCMotor.h
firmware/arduino/src/lib/: tlvcodec.c  tlvcodec.h
firmware/arduino/src/messages/: TLV_Payloads.h  TLV_TypeDefs.h
firmware/arduino/src/modules/: MessageCenter.cpp  MessageCenter.h
firmware/tests/test_tlvcodec_host/: test_tlvcodec_host.c
nuevo_ui/: README.md
nuevo_ui/backend/nuevo_bridge/: TLV_TypeDefs.py  payloads.py  serial_manager.py
nuevo_ui/backend/nuevo_bridge/tests/: test_message_router_compact_tlv.py
nuevo_ui/backend/tlvcodec/docs/: README.md
nuevo_ui/backend/tlvcodec/src/: decoder.py  encoder.py  utils.py
nuevo_ui/docs/: architecture.md
nuevo_ui/frontend/src/: App.tsx
nuevo_ui/frontend/src/components/: DCMotorSection.tsx  (+4 more)
ros2_ws/: README.md  v4l2_loopback_camera_plan.md
ros2_ws/docker/: Dockerfile.robot  docker-compose.rpi.yml
ros2_ws/host_camera/: check.sh  install.sh  nuevo-pi-camera-feed  nuevo-pi-camera-feed.service  nuevo-pi-camera.env
ros2_ws/src/bridge_interfaces/: CMakeLists.txt
ros2_ws/src/robot/: ROBOT_NODE_DESIGN.md  setup.cfg
ros2_ws/src/vision/: VISION_NODE_PLAN.md  setup.cfg
ros2_ws/src/vision/data/: README.md
ros2_ws/src/vision/launch/: vision_debug.launch.py  vision_production.launch.py
ros2_ws/src/vision/vision/: model_utils.py  rule_based_detection.py  vision_node.py
ros2_ws/tests/: test_uart_arduino.py
tlv_protocol/: TLV_Payloads.md  TLV_TypeDefs.json  generate_tlv_types.py
(+23 files in other folders)
