[metadata]
name = vision
version = 0.1.0
description = ROS2 package for camera and perception nodes
author = MAE 162 Staff
license = MIT

[options]
packages = find:
install_requires =
    setuptools

[options.packages.find]
include = vision*

[options.data_files]
share/ament_index/resource_index/packages =
    resource/vision
share/vision =
    package.xml
share/vision/data =
    data/README.md
share/vision/data/yolo26n_ncnn_imgsz_640 =
    data/yolo26n_ncnn_imgsz_640/metadata.yaml
    data/yolo26n_ncnn_imgsz_640/model.ncnn.bin
    data/yolo26n_ncnn_imgsz_640/model.ncnn.param

[options.entry_points]
console_scripts =
    vision_node = vision.vision_node:main

[develop]
script_dir = $base/lib/vision
[install]
install_scripts = $base/lib/vision
